[package]
name = "turso-cat-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
axum = "0.6.18"
axum-macros = "0.3.8"
chrono = "0.4.26"
libsql-client = "0.30.1"
reqwest = "0.11.18"
serde = { version = "1.0.171", features = ["derive"] }
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
shuttle-secrets = "0.21.0"
shuttle-turso = "0.21.0"
tokio = "1.28.2"
