[package]
name = "turso-cat-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
axum = "0.6.18"
axum-macros = "0.3.8"
chrono = "0.4.26"
lettre = {version = "0.10.4", features = ["tokio1-native-tls"] }
libsql-client = "0.30.1"
serde = { version = "1.0.171", features = ["derive"] }
shuttle-axum = "0.22.0"
shuttle-runtime = "0.22.0"
shuttle-secrets = "0.22.0"
shuttle-turso = "0.22.0"
time = "0.3.23"
tokio = "1.28.2"
tokio-cron = "0.1.2"
tokio-cron-scheduler = "0.9.4"
